# AirCtl

./: .gitignore  README.md  pyproject.toml
src/airctl/: __init__.py  __main__.py  actions.py  app.py  capture.py  classifier.py  config.default.toml  config.py  dispatcher.py  features.py  filters.py  fsm.py  landmarker.py  paths.py  tray.py
src/airctl/backends/: audio.py  base.py  custom.py  fakes.py  input.py  media.py  window.py
tests/: hands.py  test_actions.py  test_classifier.py  test_config.py  test_features.py  test_fsm.py
