[project]
name = "airctl"
version = "0.1.0"
description = "AirCtl - real-time gesture-controlled system interface for Windows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mediapipe>=0.10.14,<0.11",
    "opencv-python>=4.9",
    "numpy>=1.26",
    "pycaw>=20240210",
    "comtypes>=1.4",
    "pynput>=1.7.6",
    "pywin32>=306",
    "pystray>=0.19.5",
    "pillow>=10",
    "watchdog>=4",
]

[project.scripts]
airctl = "airctl.__main__:main"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/airctl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
